# troll

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: ci.yml  release.yaml  rust.yml
examples/: Makefile  anonymous-enum.c  anonymous-union-structure.c  array.c  complex-structure.c  const-array.c  const.c  enum.c  extern-sub.c  extern-sub.h  extern.c  function-pointer.c  many-compilation-units-sub.c  many-compilation-units-sub.h  many-compilation-units.c  pointer.c  simple.c  simple1.c  simple2.c  structure.c  typedef.c  union.c  void-function-pointer.c  volatile.c
src/: domain.rs  infrastructure.rs  lib.rs  library.rs  main.rs
src/domain/: entity.rs  entity_repository.rs  entry_factory.rs  global_variable.rs  global_variable_view.rs  global_variable_view_factory.rs  global_variables_extractor.rs  mod.rs  type_entry.rs  type_entry_repository.rs  variable_declaration_entry.rs  variable_declaration_entry_repository.rs  variable_declaration_repository.rs
src/infrastructure/: mod.rs
src/infrastructure/fromelf/: stdout.rs
src/usecase/: dump_global_variables.rs  mod.rs
tests/domain/: global_variable_view_factory_test.rs  global_variables_extractor_test.rs  mod.rs
