[package]
name = "troll"
version = "0.5.0"
authors = ["forestaa <t.daichi.3@gmail.com>"]
edition = "2018"

[lib]
name = "troll"
doctest = false
path = "src/lib.rs"

[[bin]]
name = "troll"
test = false
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
gimli = "0.20.0"
log = "0.4.8"
memmap = "0.7.0"
object = "0.17.0"
